--- a/paquescolar-web/src/main/resources/sv/gob/mined/apps/reportes/pagoproveedor/rptPagoProvee.jrxml
+++ b/paquescolar-web/src/main/resources/sv/gob/mined/apps/reportes/pagoproveedor/rptPagoProvee.jrxml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="report name" pageWidth="842" pageHeight="595" orientation="Landscape" columnWidth="802" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="d04cfec0-fdb6-4498-beab-2c61f3e21ca5">
-	<property name="ireport.zoom" value="1.948717100000002"/>
+	<property name="ireport.zoom" value="1.5"/>
 	<property name="ireport.x" value="0"/>
-	<property name="ireport.y" value="48"/>
+	<property name="ireport.y" value="0"/>
 	<style name="table">
 		<box>
 			<pen lineWidth="1.0" lineColor="#000000"/>
@@ -71,6 +71,9 @@
 		<field name="montoActual" class="java.math.BigDecimal">
 			<fieldDescription><![CDATA[montoActual]]></fieldDescription>
 		</field>
+		<field name="numCheque" class="java.lang.String">
+			<fieldDescription><![CDATA[numCheque]]></fieldDescription>
+		</field>
 	</subDataset>
 	<parameter name="pEscudo" class="java.lang.String">
 		<defaultValueExpression><![CDATA["/media/misanchez/Datos/git_paquescolar/paquescolar-web/src/main/webapp/resources/images/"]]></defaultValueExpression>
@@ -120,16 +123,16 @@
 						<dataSourceExpression><![CDATA[new net.sf.jasperreports.engine.data.JRBeanCollectionDataSource($F{lstDetalle})]]></dataSourceExpression>
 					</datasetRun>
 					<jr:column width="31" uuid="92354244-064c-4c96-bdec-4e2abcff8757">
-						<jr:columnHeader style="table_TD" height="24" rowSpan="2">
+						<jr:columnHeader style="table_TD" height="32" rowSpan="2">
 							<staticText>
-								<reportElement uuid="ee7c7f77-0984-40e1-be45-09f45e14bed2" x="0" y="0" width="31" height="24"/>
+								<reportElement uuid="ee7c7f77-0984-40e1-be45-09f45e14bed2" x="0" y="0" width="31" height="32"/>
 								<textElement textAlignment="Center" verticalAlignment="Middle">
 									<font size="7"/>
 								</textElement>
 								<text><![CDATA[Código Entidad]]></text>
 							</staticText>
 						</jr:columnHeader>
-						<jr:detailCell style="table 1_TD" height="11" rowSpan="1">
+						<jr:detailCell style="table 1_TD" height="10" rowSpan="1">
 							<textField>
 								<reportElement uuid="f2fdc97d-4a4f-4311-a52c-724d30fb6f74" x="0" y="0" width="31" height="10"/>
 								<textElement textAlignment="Center" verticalAlignment="Middle">
@@ -139,19 +142,19 @@
 							</textField>
 						</jr:detailCell>
 					</jr:column>
-					<jr:column width="279" uuid="d59f9ac8-641c-4995-b846-5b51ebe730d7">
-						<jr:columnHeader style="table_TD" height="24" rowSpan="2">
+					<jr:column width="219" uuid="d59f9ac8-641c-4995-b846-5b51ebe730d7">
+						<jr:columnHeader style="table_TD" height="32" rowSpan="2">
 							<staticText>
-								<reportElement uuid="042790af-e79c-409a-bac0-461586e697a2" x="0" y="0" width="279" height="24"/>
+								<reportElement uuid="042790af-e79c-409a-bac0-461586e697a2" x="0" y="0" width="219" height="32"/>
 								<textElement textAlignment="Center" verticalAlignment="Middle">
 									<font size="8"/>
 								</textElement>
 								<text><![CDATA[Nombre C.E.]]></text>
 							</staticText>
 						</jr:columnHeader>
-						<jr:detailCell style="table 1_TD" height="11" rowSpan="1">
+						<jr:detailCell style="table 1_TD" height="10" rowSpan="1">
 							<textField isStretchWithOverflow="true">
-								<reportElement uuid="a00f96c7-2add-495b-b336-f7bbe96bd320" x="1" y="0" width="276" height="10"/>
+								<reportElement uuid="a00f96c7-2add-495b-b336-f7bbe96bd320" x="1" y="0" width="216" height="10"/>
 								<textElement verticalAlignment="Middle">
 									<font size="6"/>
 								</textElement>
@@ -160,16 +163,16 @@
 						</jr:detailCell>
 					</jr:column>
 					<jr:column width="56" uuid="fc7c1104-44b5-4d1e-9040-22d88bd99352">
-						<jr:columnHeader style="table_TD" height="24" rowSpan="2">
+						<jr:columnHeader style="table_TD" height="32" rowSpan="2">
 							<staticText>
-								<reportElement uuid="50eecec6-10df-456d-b811-cf6f90c0110e" x="0" y="0" width="56" height="24"/>
+								<reportElement uuid="50eecec6-10df-456d-b811-cf6f90c0110e" x="0" y="0" width="56" height="32"/>
 								<textElement textAlignment="Center" verticalAlignment="Middle">
 									<font size="8"/>
 								</textElement>
 								<text><![CDATA[Rubro]]></text>
 							</staticText>
 						</jr:columnHeader>
-						<jr:detailCell style="table 1_TD" height="11" rowSpan="1">
+						<jr:detailCell style="table 1_TD" height="10" rowSpan="1">
 							<textField isStretchWithOverflow="true">
 								<reportElement uuid="b92f680e-5144-4b05-a34c-3191572af4dd" x="1" y="0" width="54" height="10"/>
 								<textElement verticalAlignment="Middle">
@@ -180,16 +183,16 @@
 						</jr:detailCell>
 					</jr:column>
 					<jr:column width="62" uuid="e2471259-ceef-403b-90d5-87b317738deb">
-						<jr:columnHeader style="table_TD" height="24" rowSpan="2">
+						<jr:columnHeader style="table_TD" height="32" rowSpan="2">
 							<staticText>
-								<reportElement uuid="8e131266-ebf5-4a5b-b825-8844a7f1f3a9" x="0" y="0" width="62" height="24"/>
+								<reportElement uuid="8e131266-ebf5-4a5b-b825-8844a7f1f3a9" x="0" y="0" width="62" height="32"/>
 								<textElement textAlignment="Center" verticalAlignment="Middle">
 									<font size="8"/>
 								</textElement>
 								<text><![CDATA[N.I.T.]]></text>
 							</staticText>
 						</jr:columnHeader>
-						<jr:detailCell style="table 1_TD" height="11" rowSpan="1">
+						<jr:detailCell style="table 1_TD" height="10" rowSpan="1">
 							<textField>
 								<reportElement uuid="9c4071a2-b644-4e1f-b9d8-6fbb72c8f8a1" x="1" y="0" width="60" height="10"/>
 								<textElement verticalAlignment="Middle">
@@ -200,16 +203,16 @@
 						</jr:detailCell>
 					</jr:column>
 					<jr:column width="229" uuid="67dfdb63-0de6-406f-bed3-8440eec7ac7b">
-						<jr:columnHeader style="table_TD" height="24" rowSpan="2">
+						<jr:columnHeader style="table_TD" height="32" rowSpan="2">
 							<staticText>
-								<reportElement uuid="6e97a4c4-af82-47a1-acf3-044c30dc81b4" x="0" y="0" width="229" height="24"/>
+								<reportElement uuid="6e97a4c4-af82-47a1-acf3-044c30dc81b4" x="0" y="0" width="229" height="32"/>
 								<textElement textAlignment="Center" verticalAlignment="Middle">
 									<font size="8"/>
 								</textElement>
 								<text><![CDATA[Razón Social]]></text>
 							</staticText>
 						</jr:columnHeader>
-						<jr:detailCell style="table 1_TD" height="11" rowSpan="1">
+						<jr:detailCell style="table 1_TD" height="10" rowSpan="1">
 							<textField isStretchWithOverflow="true">
 								<reportElement uuid="af3b81d0-8b93-4541-a583-085766b07b6d" x="1" y="0" width="226" height="10"/>
 								<textElement verticalAlignment="Middle">
@@ -219,29 +222,29 @@
 							</textField>
 						</jr:detailCell>
 					</jr:column>
-					<jr:columnGroup width="79" uuid="e6d4307e-4fca-4466-99d4-255968e2be37">
+					<jr:columnGroup width="120" uuid="e6d4307e-4fca-4466-99d4-255968e2be37">
 						<jr:columnHeader style="table 1_TD" height="12" rowSpan="1">
 							<staticText>
-								<reportElement uuid="6e97a4c4-af82-47a1-acf3-044c30dc81b4" x="0" y="0" width="79" height="12"/>
+								<reportElement uuid="6e97a4c4-af82-47a1-acf3-044c30dc81b4" x="0" y="0" width="120" height="12"/>
 								<textElement textAlignment="Center" verticalAlignment="Middle">
 									<font size="8"/>
 								</textElement>
 								<text><![CDATA[Documento de Pago]]></text>
 							</staticText>
 						</jr:columnHeader>
-						<jr:column width="39" uuid="ce68b82b-15a0-4d6b-a4f7-6f0d6826cad6">
-							<jr:columnHeader style="table_TD" height="12" rowSpan="1">
+						<jr:column width="29" uuid="ce68b82b-15a0-4d6b-a4f7-6f0d6826cad6">
+							<jr:columnHeader style="table_TD" height="20" rowSpan="1">
 								<staticText>
-									<reportElement uuid="0590db10-79a3-403b-8b8a-536177edbe14" x="0" y="0" width="39" height="12"/>
+									<reportElement uuid="0590db10-79a3-403b-8b8a-536177edbe14" x="0" y="0" width="29" height="20"/>
 									<textElement textAlignment="Center" verticalAlignment="Middle">
 										<font size="7"/>
 									</textElement>
 									<text><![CDATA[Número]]></text>
 								</staticText>
 							</jr:columnHeader>
-							<jr:detailCell style="table 1_TD" height="11" rowSpan="1">
+							<jr:detailCell style="table 1_TD" height="10" rowSpan="1">
 								<textField>
-									<reportElement uuid="3b52f9df-7f74-4761-bb3d-c24fc6b9eba6" x="1" y="0" width="38" height="10"/>
+									<reportElement uuid="3b52f9df-7f74-4761-bb3d-c24fc6b9eba6" x="1" y="0" width="28" height="10"/>
 									<textElement verticalAlignment="Middle">
 										<font size="6"/>
 									</textElement>
@@ -250,16 +253,16 @@
 							</jr:detailCell>
 						</jr:column>
 						<jr:column width="40" uuid="d3345ed3-c930-41eb-a6b2-25a06a2ba1bd">
-							<jr:columnHeader style="table_TD" height="12" rowSpan="1">
+							<jr:columnHeader style="table_TD" height="20" rowSpan="1">
 								<staticText>
-									<reportElement uuid="fdf82b64-10ff-44e3-90d8-e78b757abcc9" x="0" y="0" width="40" height="12"/>
+									<reportElement uuid="fdf82b64-10ff-44e3-90d8-e78b757abcc9" x="0" y="0" width="40" height="20"/>
 									<textElement textAlignment="Center" verticalAlignment="Middle">
 										<font size="7"/>
 									</textElement>
 									<text><![CDATA[Fecha]]></text>
 								</staticText>
 							</jr:columnHeader>
-							<jr:detailCell style="table 1_TD" height="11" rowSpan="1">
+							<jr:detailCell style="table 1_TD" height="10" rowSpan="1">
 								<textField pattern="dd/MM/yyyy">
 									<reportElement uuid="2cb2e353-54e2-4066-9d87-6af256f56e97" x="0" y="0" width="40" height="10"/>
 									<textElement textAlignment="Center" verticalAlignment="Middle">
@@ -269,18 +272,39 @@
 								</textField>
 							</jr:detailCell>
 						</jr:column>
+						<jr:column width="51" uuid="f991055f-6ec1-4e7d-b2b8-20663fda1db8">
+							<jr:tableFooter height="0" rowSpan="1"/>
+							<jr:columnHeader height="20" rowSpan="1">
+								<staticText>
+									<reportElement uuid="fdf82b64-10ff-44e3-90d8-e78b757abcc9" x="1" y="0" width="50" height="20"/>
+									<textElement textAlignment="Center" verticalAlignment="Middle">
+										<font size="5"/>
+									</textElement>
+									<text><![CDATA[No Cheque o Abono a Cuenta]]></text>
+								</staticText>
+							</jr:columnHeader>
+							<jr:detailCell height="10" rowSpan="1">
+								<textField pattern="dd/MM/yyyy">
+									<reportElement uuid="2cb2e353-54e2-4066-9d87-6af256f56e97" x="0" y="0" width="48" height="10"/>
+									<textElement textAlignment="Right" verticalAlignment="Middle">
+										<font size="6"/>
+									</textElement>
+									<textFieldExpression><![CDATA[$F{numCheque}]]></textFieldExpression>
+								</textField>
+							</jr:detailCell>
+						</jr:column>
 					</jr:columnGroup>
 					<jr:column width="40" uuid="39ab7521-fc13-4db7-a138-c9c86a17d2f2">
-						<jr:columnHeader style="table_TD" height="24" rowSpan="2">
+						<jr:columnHeader style="table_TD" height="32" rowSpan="2">
 							<staticText>
-								<reportElement uuid="372c5297-71df-4ecc-b272-b4fb21e90585" x="0" y="0" width="40" height="24"/>
+								<reportElement uuid="372c5297-71df-4ecc-b272-b4fb21e90585" x="0" y="0" width="40" height="32"/>
 								<textElement textAlignment="Center" verticalAlignment="Middle">
 									<font size="7"/>
 								</textElement>
 								<text><![CDATA[Monto ($)]]></text>
 							</staticText>
 						</jr:columnHeader>
-						<jr:detailCell style="table 1_TD" height="11" rowSpan="1">
+						<jr:detailCell style="table 1_TD" height="10" rowSpan="1">
 							<textField pattern="#,##0.00;#,##0.00-">
 								<reportElement uuid="968ff6a7-9e8d-4735-b6c4-cd7d2958e831" x="0" y="0" width="38" height="10"/>
 								<textElement textAlignment="Right" verticalAlignment="Middle">
