--- a/paquescolar-web/src/main/resources/sv/gob/mined/apps/reportes/contratos/subRptContratoPersona.jrxml
+++ b/paquescolar-web/src/main/resources/sv/gob/mined/apps/reportes/contratos/subRptContratoPersona.jrxml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="subRptContratoPersona" pageWidth="424" pageHeight="802" whenNoDataType="AllSectionsNoDetail" columnWidth="424" leftMargin="0" rightMargin="0" topMargin="0" bottomMargin="0" uuid="6e2983d7-63c3-4094-bcce-5fe808faaf7f">
-	<property name="ireport.zoom" value="3.005259203606313"/>
-	<property name="ireport.x" value="286"/>
+	<property name="ireport.zoom" value="4.000000000000009"/>
+	<property name="ireport.x" value="0"/>
 	<property name="ireport.y" value="0"/>
 	<property name="ireport.scriptlethandling" value="0"/>
 	<property name="ireport.encoding" value="UTF-8"/>
@@ -42,15 +42,15 @@
 		<band splitType="Stretch"/>
 	</pageHeader>
 	<columnHeader>
-		<band height="14" splitType="Stretch">
+		<band height="25" splitType="Stretch">
 			<rectangle>
-				<reportElement key="rectangle-1" mode="Transparent" x="0" y="0" width="423" height="14" uuid="c50ed2e4-171b-4d5a-bf5a-f9400a868a15"/>
+				<reportElement uuid="c50ed2e4-171b-4d5a-bf5a-f9400a868a15" key="rectangle-1" mode="Transparent" x="0" y="0" width="423" height="25"/>
 				<graphicElement>
 					<pen lineWidth="0.75" lineStyle="Solid"/>
 				</graphicElement>
 			</rectangle>
 			<staticText>
-				<reportElement key="staticText-1" x="1" y="1" width="39" height="12" uuid="31fe7fd8-a758-4990-b1eb-22cc43c358d0"/>
+				<reportElement uuid="31fe7fd8-a758-4990-b1eb-22cc43c358d0" key="staticText-1" x="1" y="1" width="39" height="23"/>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -60,10 +60,10 @@
 				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font fontName="Arial" size="8" isBold="true" pdfFontName="Helvetica-Bold"/>
 				</textElement>
-				<text><![CDATA[No Item]]></text>
+				<text><![CDATA[No. Ítem]]></text>
 			</staticText>
 			<staticText>
-				<reportElement key="staticText-2" x="41" y="1" width="188" height="12" uuid="fd5ae13f-33da-4bdd-974f-ba27f4b63e52"/>
+				<reportElement uuid="fd5ae13f-33da-4bdd-974f-ba27f4b63e52" key="staticText-2" x="41" y="1" width="188" height="23"/>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -76,7 +76,7 @@
 				<text><![CDATA[Descripción del Item]]></text>
 			</staticText>
 			<staticText>
-				<reportElement key="staticText-3" x="230" y="2" width="47" height="12" uuid="b8345fb8-9d69-4fa2-a511-fcaf9fb93f53"/>
+				<reportElement uuid="b8345fb8-9d69-4fa2-a511-fcaf9fb93f53" key="staticText-3" x="230" y="2" width="47" height="23"/>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -89,7 +89,7 @@
 				<text><![CDATA[Cantidad]]></text>
 			</staticText>
 			<staticText>
-				<reportElement key="staticText-4" x="278" y="1" width="70" height="12" uuid="07a11a72-fd36-43e4-b00e-c3302bbefb56"/>
+				<reportElement uuid="07a11a72-fd36-43e4-b00e-c3302bbefb56" key="staticText-4" x="278" y="1" width="59" height="23"/>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -99,10 +99,10 @@
 				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font fontName="Arial" size="8" isBold="true" pdfFontName="Helvetica-Bold"/>
 				</textElement>
-				<text><![CDATA[Precio Unit. ($)]]></text>
+				<text><![CDATA[Precio Unit.]]></text>
 			</staticText>
 			<staticText>
-				<reportElement key="staticText-5" x="351" y="1" width="71" height="12" uuid="d5bb8140-d320-4047-9c89-6cc2cf993058"/>
+				<reportElement uuid="d5bb8140-d320-4047-9c89-6cc2cf993058" key="staticText-5" x="356" y="1" width="52" height="23"/>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -112,28 +112,28 @@
 				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font fontName="Arial" size="8" isBold="true" pdfFontName="Helvetica-Bold"/>
 				</textElement>
-				<text><![CDATA[Precio Total ($)]]></text>
+				<text><![CDATA[Monto Total (Incluye IVA)]]></text>
 			</staticText>
 			<line>
-				<reportElement key="line-1" x="349" y="0" width="1" height="14" uuid="ea96499d-10c4-4fd0-bc86-17a1779f03b9"/>
+				<reportElement uuid="ea96499d-10c4-4fd0-bc86-17a1779f03b9" key="line-1" x="338" y="0" width="1" height="25"/>
 				<graphicElement>
 					<pen lineWidth="0.75"/>
 				</graphicElement>
 			</line>
 			<line>
-				<reportElement key="line-2" x="40" y="0" width="1" height="14" uuid="65b0d540-fcce-4dfe-9a9d-8f8ed2dac20a"/>
+				<reportElement uuid="65b0d540-fcce-4dfe-9a9d-8f8ed2dac20a" key="line-2" x="40" y="0" width="1" height="25"/>
 				<graphicElement>
 					<pen lineWidth="0.75"/>
 				</graphicElement>
 			</line>
 			<line>
-				<reportElement key="line-4" x="276" y="0" width="1" height="14" uuid="67e393bc-1569-4ff0-b37d-8cae278d2579"/>
+				<reportElement uuid="67e393bc-1569-4ff0-b37d-8cae278d2579" key="line-4" x="276" y="0" width="1" height="25"/>
 				<graphicElement>
 					<pen lineWidth="0.75"/>
 				</graphicElement>
 			</line>
 			<line>
-				<reportElement key="line-2" x="229" y="0" width="1" height="14" uuid="75ecb369-96e9-46ab-9745-5a7235204ecb"/>
+				<reportElement uuid="75ecb369-96e9-46ab-9745-5a7235204ecb" key="line-2" x="229" y="0" width="1" height="25"/>
 				<graphicElement>
 					<pen lineWidth="0.75"/>
 				</graphicElement>
@@ -143,13 +143,13 @@
 	<detail>
 		<band height="14" splitType="Stretch">
 			<rectangle>
-				<reportElement key="rectangle-2" stretchType="RelativeToBandHeight" mode="Transparent" x="0" y="0" width="423" height="14" uuid="a91bfb31-ec96-4e10-9531-6d21dc3ee313"/>
+				<reportElement uuid="a91bfb31-ec96-4e10-9531-6d21dc3ee313" key="rectangle-2" stretchType="RelativeToBandHeight" mode="Transparent" x="0" y="0" width="423" height="14"/>
 				<graphicElement>
 					<pen lineWidth="0.75"/>
 				</graphicElement>
 			</rectangle>
 			<textField isBlankWhenNull="false">
-				<reportElement key="textField-1" x="1" y="1" width="39" height="12" uuid="75645be2-9771-4e51-a128-98e84c9671ba"/>
+				<reportElement uuid="75645be2-9771-4e51-a128-98e84c9671ba" key="textField-1" x="1" y="1" width="39" height="12"/>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -157,12 +157,12 @@
 					<rightPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 				</box>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
-					<font fontName="Arial" size="9"/>
+					<font fontName="Arial" size="8"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{noItem}]]></textFieldExpression>
 			</textField>
 			<textField isStretchWithOverflow="true" isBlankWhenNull="false">
-				<reportElement key="textField-2" stretchType="RelativeToBandHeight" mode="Transparent" x="42" y="1" width="186" height="12" uuid="333efa86-e956-48c9-b1bd-895c9b405159"/>
+				<reportElement uuid="333efa86-e956-48c9-b1bd-895c9b405159" key="textField-2" stretchType="RelativeToBandHeight" mode="Transparent" x="42" y="1" width="186" height="12"/>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -170,12 +170,12 @@
 					<rightPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 				</box>
 				<textElement verticalAlignment="Middle">
-					<font fontName="Arial" size="9"/>
+					<font fontName="Arial" size="8"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{consolidadoEspTec}]]></textFieldExpression>
 			</textField>
 			<textField pattern="###0;###0-" isBlankWhenNull="false">
-				<reportElement key="textField-3" x="231" y="1" width="44" height="12" uuid="17fd3acb-8faf-4ab3-870f-f76d14694ee3"/>
+				<reportElement uuid="17fd3acb-8faf-4ab3-870f-f76d14694ee3" key="textField-3" x="231" y="1" width="44" height="12"/>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -183,12 +183,12 @@
 					<rightPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 				</box>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
-					<font fontName="Arial" size="9"/>
+					<font fontName="Arial" size="8"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{cantidad}]]></textFieldExpression>
 			</textField>
 			<textField pattern="#,##0.00" isBlankWhenNull="false">
-				<reportElement key="textField-4" x="278" y="1" width="68" height="12" uuid="6fa15fb9-185b-4098-a602-a528a34a5258"/>
+				<reportElement uuid="6fa15fb9-185b-4098-a602-a528a34a5258" key="textField-4" x="289" y="1" width="46" height="12"/>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -196,12 +196,12 @@
 					<rightPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 				</box>
 				<textElement textAlignment="Right" verticalAlignment="Middle">
-					<font fontName="Arial" size="9"/>
+					<font fontName="Arial" size="8"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{precioUnitario}]]></textFieldExpression>
 			</textField>
 			<textField pattern="#,##0.00" isBlankWhenNull="false">
-				<reportElement key="textField-5" x="351" y="1" width="69" height="12" uuid="1360c59c-6e35-4e09-951f-79357c9e4843"/>
+				<reportElement uuid="1360c59c-6e35-4e09-951f-79357c9e4843" key="textField-5" x="351" y="1" width="69" height="12"/>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -209,46 +209,72 @@
 					<rightPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 				</box>
 				<textElement textAlignment="Right" verticalAlignment="Middle">
-					<font fontName="Arial" size="9"/>
+					<font fontName="Arial" size="8"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{subTotal}]]></textFieldExpression>
 			</textField>
 			<line>
-				<reportElement key="line-5" stretchType="RelativeToBandHeight" x="349" y="0" width="1" height="14" uuid="ffa824ed-0348-4cca-8e74-27119adb54bc"/>
+				<reportElement uuid="ffa824ed-0348-4cca-8e74-27119adb54bc" key="line-5" stretchType="RelativeToBandHeight" x="338" y="0" width="1" height="14"/>
 				<graphicElement>
 					<pen lineWidth="0.75"/>
 				</graphicElement>
 			</line>
 			<line>
-				<reportElement key="line-6" stretchType="RelativeToBandHeight" x="40" y="0" width="1" height="14" uuid="8cbb8ae7-1d11-4a70-8d18-810d4b560372"/>
+				<reportElement uuid="8cbb8ae7-1d11-4a70-8d18-810d4b560372" key="line-6" stretchType="RelativeToBandHeight" x="40" y="0" width="1" height="14"/>
 				<graphicElement>
 					<pen lineWidth="0.75"/>
 				</graphicElement>
 			</line>
 			<line>
-				<reportElement key="line-8" stretchType="RelativeToBandHeight" x="276" y="0" width="1" height="14" uuid="57911c2f-ee12-4c4c-9700-6d334ad49567"/>
+				<reportElement uuid="57911c2f-ee12-4c4c-9700-6d334ad49567" key="line-8" stretchType="RelativeToBandHeight" x="276" y="0" width="1" height="14"/>
 				<graphicElement>
 					<pen lineWidth="0.75"/>
 				</graphicElement>
 			</line>
 			<line>
-				<reportElement key="line-6" stretchType="RelativeToBandHeight" x="229" y="0" width="1" height="14" uuid="2eb595a0-768c-481d-9423-5b6f47030f28"/>
+				<reportElement uuid="2eb595a0-768c-481d-9423-5b6f47030f28" key="line-6" stretchType="RelativeToBandHeight" x="229" y="0" width="1" height="14"/>
 				<graphicElement>
 					<pen lineWidth="0.75"/>
 				</graphicElement>
 			</line>
+			<staticText>
+				<reportElement uuid="07a11a72-fd36-43e4-b00e-c3302bbefb56" key="staticText-4" x="278" y="1" width="11" height="12"/>
+				<box>
+					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+					<bottomPen lineWidth="0.0" lineColor="#000000"/>
+					<rightPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+				</box>
+				<textElement textAlignment="Center" verticalAlignment="Middle">
+					<font fontName="Arial" size="8" isBold="false" pdfFontName="Helvetica-Bold"/>
+				</textElement>
+				<text><![CDATA[$]]></text>
+			</staticText>
+			<staticText>
+				<reportElement uuid="07a11a72-fd36-43e4-b00e-c3302bbefb56" key="staticText-4" x="340" y="1" width="11" height="12"/>
+				<box>
+					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+					<bottomPen lineWidth="0.0" lineColor="#000000"/>
+					<rightPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+				</box>
+				<textElement textAlignment="Center" verticalAlignment="Middle">
+					<font fontName="Arial" size="8" isBold="false" pdfFontName="Helvetica-Bold"/>
+				</textElement>
+				<text><![CDATA[$]]></text>
+			</staticText>
 		</band>
 	</detail>
 	<columnFooter>
 		<band height="16" splitType="Stretch">
 			<rectangle>
-				<reportElement key="rectangle-3" mode="Transparent" x="0" y="0" width="423" height="15" uuid="6875c411-d2ea-4987-aeed-f51c91499dc0"/>
+				<reportElement uuid="6875c411-d2ea-4987-aeed-f51c91499dc0" key="rectangle-3" mode="Transparent" x="0" y="0" width="423" height="15"/>
 				<graphicElement>
 					<pen lineWidth="0.75"/>
 				</graphicElement>
 			</rectangle>
 			<textField pattern="$ #,##0.00" isBlankWhenNull="true">
-				<reportElement key="textField-6" x="351" y="0" width="69" height="13" uuid="a9f24009-5576-423e-92ed-2a25eb729aba"/>
+				<reportElement uuid="a9f24009-5576-423e-92ed-2a25eb729aba" key="textField-6" x="351" y="1" width="69" height="12"/>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -261,17 +287,30 @@
 				<textFieldExpression><![CDATA[$V{Total}]]></textFieldExpression>
 			</textField>
 			<line>
-				<reportElement key="line-9" x="349" y="0" width="1" height="15" uuid="57a9f320-651c-486a-84d2-6daaa7af27f6"/>
+				<reportElement uuid="57a9f320-651c-486a-84d2-6daaa7af27f6" key="line-9" x="338" y="0" width="1" height="15"/>
 				<graphicElement>
 					<pen lineWidth="0.75"/>
 				</graphicElement>
 			</line>
 			<staticText>
-				<reportElement x="6" y="0" width="222" height="13" uuid="9b6a3a69-cc59-487a-8131-ff0b73f92d0b"/>
+				<reportElement uuid="9b6a3a69-cc59-487a-8131-ff0b73f92d0b" x="6" y="0" width="222" height="13"/>
 				<textElement verticalAlignment="Middle">
 					<font fontName="Arial" size="8" isBold="true"/>
 				</textElement>
 				<text><![CDATA[SUB TOTAL CONTRATADO PARVULARIA + BASICA]]></text>
+			</staticText>
+			<staticText>
+				<reportElement uuid="07a11a72-fd36-43e4-b00e-c3302bbefb56" key="staticText-4" x="340" y="1" width="11" height="12"/>
+				<box>
+					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+					<bottomPen lineWidth="0.0" lineColor="#000000"/>
+					<rightPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+				</box>
+				<textElement textAlignment="Center" verticalAlignment="Middle">
+					<font fontName="Arial" size="8" isBold="false" pdfFontName="Helvetica-Bold"/>
+				</textElement>
+				<text><![CDATA[$]]></text>
 			</staticText>
 		</band>
 	</columnFooter>
