--- a/paquescolar-web/src/main/resources/sv/gob/mined/apps/reportes/notasactas/rptActaAdjudicacionBean2018.jrxml
+++ b/paquescolar-web/src/main/resources/sv/gob/mined/apps/reportes/notasactas/rptActaAdjudicacionBean2018.jrxml
@@ -2,7 +2,7 @@
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="rptActaAdjudicacion" pageWidth="612" pageHeight="792" columnWidth="510" leftMargin="51" rightMargin="51" topMargin="39" bottomMargin="39" uuid="244b56df-7b1c-4fca-9e9d-dde2f9b172eb">
 	<property name="ireport.zoom" value="1.5"/>
 	<property name="ireport.x" value="0"/>
-	<property name="ireport.y" value="144"/>
+	<property name="ireport.y" value="379"/>
 	<property name="ireport.scriptlethandling" value="0"/>
 	<property name="ireport.encoding" value="UTF-8"/>
 	<import value="net.sf.jasperreports.engine.*"/>
@@ -54,7 +54,7 @@
 		<groupHeader>
 			<band height="232" splitType="Stretch">
 				<textField isBlankWhenNull="false">
-					<reportElement key="textField-1" x="0" y="69" width="510" height="117" uuid="c89610dd-e8b5-4071-a79e-c44be59352dc"/>
+					<reportElement uuid="c89610dd-e8b5-4071-a79e-c44be59352dc" key="textField-1" x="0" y="69" width="510" height="117"/>
 					<box>
 						<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 						<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -71,10 +71,10 @@ concat(" del año "+Herramientas.getNumAnyo($F{fechaApertura})).concat(", los/la
 concat("económicamente las cotizaciones presentadas para el proceso de compra ").concat($F{descripcionRubro}).concat(", realizado mediante la modalidad ").
 concat("de Libre Gestión y dar la recomendación de adjudicación respectiva.").
 concat("\n\nETAPAS DEL PROCESO:\n\n").
-concat("a) Las solicitudes de cotizaciones se entregaron en fecha: ").concat($F{fechaApertura})]]></textFieldExpression>
+concat("a) Las solicitudes de cotizaciones se entregaron en fecha ").concat($F{fechaApertura}+" a:")]]></textFieldExpression>
 				</textField>
 				<staticText>
-					<reportElement key="staticText-5" x="102" y="11" width="308" height="35" uuid="1d0617c7-9e09-41e0-ac04-856078b2be79"/>
+					<reportElement uuid="1d0617c7-9e09-41e0-ac04-856078b2be79" key="staticText-5" x="102" y="11" width="308" height="35"/>
 					<box>
 						<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 						<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -87,7 +87,7 @@ concat("a) Las solicitudes de cotizaciones se entregaron en fecha: ").concat($F{
 					<text><![CDATA[ACTA DE ADJUDICACION]]></text>
 				</staticText>
 				<image>
-					<reportElement key="image-1" x="0" y="0" width="60" height="60" uuid="d662ed9c-377b-4d74-87d4-2293e65456b4"/>
+					<reportElement uuid="d662ed9c-377b-4d74-87d4-2293e65456b4" key="image-1" x="0" y="0" width="60" height="60"/>
 					<box>
 						<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 						<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -97,7 +97,7 @@ concat("a) Las solicitudes de cotizaciones se entregaron en fecha: ").concat($F{
 					<imageExpression><![CDATA[$P{ubicacionImagenes}+"escudo.jpg"]]></imageExpression>
 				</image>
 				<image>
-					<reportElement key="image-2" x="445" y="4" width="65" height="51" uuid="a3a21642-5656-4bc8-9f47-63ca6738e700"/>
+					<reportElement uuid="a3a21642-5656-4bc8-9f47-63ca6738e700" key="image-2" x="445" y="4" width="65" height="51"/>
 					<box>
 						<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 						<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -107,16 +107,16 @@ concat("a) Las solicitudes de cotizaciones se entregaron en fecha: ").concat($F{
 					<imageExpression><![CDATA[$P{ubicacionImagenes} + "logo_mined_rpt.png"]]></imageExpression>
 				</image>
 				<subreport isUsingCache="true">
-					<reportElement key="subreport-3" x="0" y="187" width="510" height="45" uuid="263910dc-3ced-4c00-8594-5c09f8bce4e9"/>
+					<reportElement uuid="263910dc-3ced-4c00-8594-5c09f8bce4e9" key="subreport-3" x="0" y="187" width="510" height="45"/>
 					<dataSourceExpression><![CDATA[new net.sf.jasperreports.engine.data.JRBeanCollectionDataSource($F{lstParticipantes})]]></dataSourceExpression>
 					<subreportExpression><![CDATA[$P{SUBREPORT_DIR} + "subRptActaAdjudicacionProveedoresBean2017.jasper"]]></subreportExpression>
 				</subreport>
 			</band>
 		</groupHeader>
 		<groupFooter>
-			<band height="95" splitType="Stretch">
+			<band height="162" splitType="Stretch">
 				<textField isStretchWithOverflow="true" isBlankWhenNull="false">
-					<reportElement key="textField-9" x="-1" y="0" width="510" height="78" uuid="919a6134-db0d-4f42-b5bb-18e8d50d805f"/>
+					<reportElement uuid="919a6134-db0d-4f42-b5bb-18e8d50d805f" key="textField-9" x="0" y="0" width="510" height="74"/>
 					<box>
 						<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 						<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -128,9 +128,47 @@ concat("a) Las solicitudes de cotizaciones se entregaron en fecha: ").concat($F{
 					</textElement>
 					<textFieldExpression><![CDATA["Por cumplir con las especificaciones requeridas por el Organismo para esta compra y de acuerdo a la justificación siguiente: ___________________________________________________________________________________"+
 "_____________________________________________________________________________________________"+
-"_____________________________________________________________________________________________\n\n\n\n\n"+
-(($F{justificacion} == null)?"":$F{justificacion})+"\n\n"+"Nombres y Firmas de quienes realizaron el análisis:"]]></textFieldExpression>
+"_____________________________________________________________________________________________"]]></textFieldExpression>
 				</textField>
+				<staticText>
+					<reportElement uuid="8e37bd84-3b2d-4f23-8a63-b84c3d8d4fcb" x="0" y="74" width="237" height="13"/>
+					<textElement>
+						<font fontName="Arial" size="9"/>
+					</textElement>
+					<text><![CDATA[Nombres y Firmas de quienes realizaron el análisis:]]></text>
+				</staticText>
+				<staticText>
+					<reportElement uuid="2347e2ab-ea28-4cf5-b364-7b1029c59552" key="staticText-1" x="261" y="74" width="14" height="13"/>
+					<box>
+						<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+						<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+						<bottomPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+						<rightPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+					</box>
+					<textElement>
+						<font fontName="Arial"/>
+					</textElement>
+					<text><![CDATA[F:]]></text>
+				</staticText>
+				<line>
+					<reportElement uuid="b817a9dc-45c9-4bfc-9eb3-aa7b3f30959f" key="line-1" x="275" y="83" width="168" height="1"/>
+				</line>
+				<staticText>
+					<reportElement uuid="2347e2ab-ea28-4cf5-b364-7b1029c59552" key="staticText-1" x="261" y="121" width="14" height="13"/>
+					<box>
+						<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+						<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+						<bottomPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+						<rightPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+					</box>
+					<textElement>
+						<font fontName="Arial"/>
+					</textElement>
+					<text><![CDATA[F:]]></text>
+				</staticText>
+				<line>
+					<reportElement uuid="b817a9dc-45c9-4bfc-9eb3-aa7b3f30959f" key="line-1" x="275" y="130" width="168" height="1"/>
+				</line>
 			</band>
 		</groupFooter>
 	</group>
@@ -149,7 +187,7 @@ concat("a) Las solicitudes de cotizaciones se entregaron en fecha: ").concat($F{
 	<detail>
 		<band height="73" splitType="Stretch">
 			<subreport isUsingCache="true">
-				<reportElement key="subreport-2" x="0" y="3" width="510" height="67" uuid="ecbc3374-9c04-4546-b4f5-ef476e0008a1"/>
+				<reportElement uuid="ecbc3374-9c04-4546-b4f5-ef476e0008a1" key="subreport-2" x="0" y="3" width="510" height="67"/>
 				<dataSourceExpression><![CDATA[new net.sf.jasperreports.engine.data.JRBeanCollectionDataSource($F{lstDetalleItem})]]></dataSourceExpression>
 				<subreportExpression><![CDATA[$P{SUBREPORT_DIR} + "subRptActaItemsBean.jasper"]]></subreportExpression>
 			</subreport>
@@ -161,7 +199,7 @@ concat("a) Las solicitudes de cotizaciones se entregaron en fecha: ").concat($F{
 	<pageFooter>
 		<band height="15" splitType="Stretch">
 			<textField pattern="" isBlankWhenNull="false">
-				<reportElement key="textField-10" x="0" y="0" width="328" height="15" uuid="894642a5-1048-41ab-b2b3-950c51cb091a"/>
+				<reportElement uuid="894642a5-1048-41ab-b2b3-950c51cb091a" key="textField-10" x="0" y="0" width="328" height="15"/>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
