--- a/paquescolar-web/src/main/resources/sv/gob/mined/apps/reportes/notasactas/rptNotaAdjudicacionBean.jrxml
+++ b/paquescolar-web/src/main/resources/sv/gob/mined/apps/reportes/notasactas/rptNotaAdjudicacionBean.jrxml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="rptNotaAdjudicacion" pageWidth="612" pageHeight="792" columnWidth="510" leftMargin="51" rightMargin="51" topMargin="39" bottomMargin="39" uuid="ad17c64a-0600-4c9a-b23f-e00788b53d02">
-	<property name="ireport.zoom" value="1.0"/>
+	<property name="ireport.zoom" value="1.0000000000000004"/>
 	<property name="ireport.x" value="0"/>
-	<property name="ireport.y" value="51"/>
+	<property name="ireport.y" value="130"/>
 	<property name="ireport.scriptlethandling" value="0"/>
 	<property name="ireport.encoding" value="UTF-8"/>
 	<import value="net.sf.jasperreports.engine.*"/>
@@ -106,7 +106,7 @@
 		<groupHeader>
 			<band height="196" splitType="Stretch">
 				<textField isStretchWithOverflow="true" isBlankWhenNull="false">
-					<reportElement key="textField-1" x="0" y="122" width="510" height="70" uuid="6b873f65-f86f-424f-9fea-fcfe7c8fc6ba"/>
+					<reportElement uuid="6b873f65-f86f-424f-9fea-fcfe7c8fc6ba" key="textField-1" x="0" y="122" width="510" height="70"/>
 					<box>
 						<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 						<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -122,7 +122,7 @@ concat(Herramientas.getNumDia($F{fechaApertura})).concat(" del mes de ").concat(
 concat("; notifica a la persona proveedora " ).concat($F{razonSocial}).concat(", que ha sido adjudicado/a en este proceso de Libre Gestión de acuerdo al siguiente detalle:")]]></textFieldExpression>
 				</textField>
 				<staticText>
-					<reportElement key="staticText-5" x="102" y="40" width="308" height="35" uuid="1ac50f42-fc87-400b-b50a-fabea9d929c4"/>
+					<reportElement uuid="1ac50f42-fc87-400b-b50a-fabea9d929c4" key="staticText-5" x="102" y="40" width="308" height="35"/>
 					<box>
 						<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 						<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -135,7 +135,7 @@ concat("; notifica a la persona proveedora " ).concat($F{razonSocial}).concat(",
 					<text><![CDATA[NOTA DE ADJUDICACION A PROVEEDORES]]></text>
 				</staticText>
 				<image>
-					<reportElement key="image-1" x="1" y="26" width="60" height="60" uuid="338cd60b-1e23-4e0e-8439-02f7d9a9ed84"/>
+					<reportElement uuid="338cd60b-1e23-4e0e-8439-02f7d9a9ed84" key="image-1" x="1" y="26" width="60" height="60"/>
 					<box>
 						<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 						<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -145,7 +145,7 @@ concat("; notifica a la persona proveedora " ).concat($F{razonSocial}).concat(",
 					<imageExpression><![CDATA[$P{ubicacionImagenes}+File.separator+"escudo.jpg"]]></imageExpression>
 				</image>
 				<image>
-					<reportElement key="image-2" x="444" y="32" width="65" height="51" uuid="2632783e-f28c-4bc6-9f4b-874e42a79b28"/>
+					<reportElement uuid="2632783e-f28c-4bc6-9f4b-874e42a79b28" key="image-2" x="444" y="32" width="65" height="51"/>
 					<box>
 						<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 						<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -159,7 +159,7 @@ concat("; notifica a la persona proveedora " ).concat($F{razonSocial}).concat(",
 		<groupFooter>
 			<band height="200" splitType="Stretch">
 				<staticText>
-					<reportElement key="staticText-1" x="1" y="74" width="163" height="22" uuid="de5dc715-d3ad-42f1-9a81-f35d862f6093"/>
+					<reportElement uuid="de5dc715-d3ad-42f1-9a81-f35d862f6093" key="staticText-1" x="1" y="74" width="163" height="22"/>
 					<box>
 						<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 						<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -172,7 +172,7 @@ concat("; notifica a la persona proveedora " ).concat($F{razonSocial}).concat(",
 					<text><![CDATA[F:]]></text>
 				</staticText>
 				<textField isBlankWhenNull="false">
-					<reportElement key="textField-4" stretchType="RelativeToTallestObject" x="1" y="96" width="232" height="84" uuid="9d282fe1-047f-48cb-a0f3-03c54589dda1"/>
+					<reportElement uuid="9d282fe1-047f-48cb-a0f3-03c54589dda1" key="textField-4" stretchType="RelativeToTallestObject" x="1" y="96" width="232" height="32"/>
 					<box>
 						<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 						<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -182,10 +182,10 @@ concat("; notifica a la persona proveedora " ).concat($F{razonSocial}).concat(",
 					<textElement>
 						<font fontName="Arial" size="11"/>
 					</textElement>
-					<textFieldExpression><![CDATA["Nombre: ".concat($F{nombreMiembro}).concat("\n\nEncargado(a) de Compra del organismo").concat("\nSello CDE, CECE, CIE")]]></textFieldExpression>
+					<textFieldExpression><![CDATA["Nombre: ".concat($F{nombreMiembro})]]></textFieldExpression>
 				</textField>
 				<staticText>
-					<reportElement key="staticText-3" x="282" y="74" width="163" height="22" uuid="01efb8f7-22cb-4afa-a43b-19df234e2b4a"/>
+					<reportElement uuid="01efb8f7-22cb-4afa-a43b-19df234e2b4a" key="staticText-3" x="282" y="74" width="163" height="22"/>
 					<box>
 						<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 						<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -198,13 +198,13 @@ concat("; notifica a la persona proveedora " ).concat($F{razonSocial}).concat(",
 					<text><![CDATA[F: ]]></text>
 				</staticText>
 				<line>
-					<reportElement key="line-1" x="12" y="86" width="150" height="1" uuid="509cb70a-e23e-4e20-8e45-8022dd6c60bb"/>
+					<reportElement uuid="509cb70a-e23e-4e20-8e45-8022dd6c60bb" key="line-1" x="12" y="86" width="150" height="1"/>
 				</line>
 				<line>
-					<reportElement key="line-2" x="293" y="86" width="150" height="1" uuid="911b008c-fa46-427f-a1d2-3fff370bf44c"/>
+					<reportElement uuid="911b008c-fa46-427f-a1d2-3fff370bf44c" key="line-2" x="293" y="86" width="150" height="1"/>
 				</line>
 				<staticText>
-					<reportElement key="staticText-6" x="1" y="8" width="148" height="33" uuid="bd483124-6657-4b1a-8249-fee170a5089f"/>
+					<reportElement uuid="bd483124-6657-4b1a-8249-fee170a5089f" key="staticText-6" x="1" y="8" width="101" height="33"/>
 					<box>
 						<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 						<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -217,7 +217,7 @@ concat("; notifica a la persona proveedora " ).concat($F{razonSocial}).concat(",
 					<text><![CDATA[NOTIFICADOR / A:]]></text>
 				</staticText>
 				<textField isBlankWhenNull="false">
-					<reportElement key="textField-7" stretchType="RelativeToTallestObject" x="282" y="96" width="228" height="84" uuid="21b7ecb0-6b2e-4ac6-89ed-f0eca91e928e"/>
+					<reportElement uuid="21b7ecb0-6b2e-4ac6-89ed-f0eca91e928e" key="textField-7" stretchType="RelativeToTallestObject" x="282" y="96" width="228" height="84"/>
 					<box>
 						<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 						<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -232,7 +232,7 @@ concat("\nDUI: ").concat((($F{numeroDui}==null)?"":$F{numeroDui})).
 concat("\nSello (aplica para Sociedades)")]]></textFieldExpression>
 				</textField>
 				<textField pattern="" isBlankWhenNull="false">
-					<reportElement key="textField-8" x="1" y="186" width="176" height="11" uuid="70986635-b782-4246-8541-0f78ae9a6b61"/>
+					<reportElement uuid="70986635-b782-4246-8541-0f78ae9a6b61" key="textField-8" x="1" y="186" width="176" height="11"/>
 					<box>
 						<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 						<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -244,6 +244,45 @@ concat("\nSello (aplica para Sociedades)")]]></textFieldExpression>
 					</textElement>
 					<textFieldExpression><![CDATA[$F{usuarioInsercion}.concat(" - "+(new SimpleDateFormat("HH:mm dd/MM/yyyy")).format(new Date()))]]></textFieldExpression>
 				</textField>
+				<line>
+					<reportElement uuid="509cb70a-e23e-4e20-8e45-8022dd6c60bb" key="line-1" x="102" y="24" width="407" height="1"/>
+				</line>
+				<staticText>
+					<reportElement uuid="c88d29b3-de73-4d88-bc77-1e6bce7d9fbf" key="staticText-4" x="164" y="74" width="63" height="13"/>
+					<box>
+						<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+						<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+						<bottomPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+						<rightPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+					</box>
+					<textElement textAlignment="Left">
+						<font fontName="Arial" size="9"/>
+					</textElement>
+					<text><![CDATA[(sello OAE)]]></text>
+				</staticText>
+				<staticText>
+					<reportElement uuid="71233b6c-e2ca-4368-be1c-35135931dd26" x="1" y="160" width="167" height="20"/>
+					<textElement>
+						<font fontName="Arial" size="11"/>
+					</textElement>
+					<text><![CDATA[Encargado(a) de Compra del organismo]]></text>
+				</staticText>
+				<staticText>
+					<reportElement uuid="de5dc715-d3ad-42f1-9a81-f35d862f6093" key="staticText-1" x="-1" y="138" width="163" height="22"/>
+					<box>
+						<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+						<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+						<bottomPen lineWidth="0.0" lineColor="#000000"/>
+						<rightPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+					</box>
+					<textElement>
+						<font fontName="Arial" size="11"/>
+					</textElement>
+					<text><![CDATA[F:]]></text>
+				</staticText>
+				<line>
+					<reportElement uuid="509cb70a-e23e-4e20-8e45-8022dd6c60bb" key="line-1" x="10" y="150" width="150" height="1"/>
+				</line>
 			</band>
 		</groupFooter>
 	</group>
@@ -262,7 +301,7 @@ concat("\nSello (aplica para Sociedades)")]]></textFieldExpression>
 	<detail>
 		<band height="39" splitType="Stretch">
 			<componentElement>
-				<reportElement key="table" style="table" x="32" y="0" width="450" height="39" uuid="a55f229a-affd-4e28-9328-95ad03e99f06"/>
+				<reportElement uuid="a55f229a-affd-4e28-9328-95ad03e99f06" key="table" style="table" x="32" y="0" width="450" height="39"/>
 				<jr:table xmlns:jr="http://jasperreports.sourceforge.net/jasperreports/components" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports/components http://jasperreports.sourceforge.net/xsd/components.xsd">
 					<datasetRun subDataset="dsDetalleItem" uuid="3a2213dd-47a6-4b63-b4f7-2f8233725fc2">
 						<dataSourceExpression><![CDATA[new net.sf.jasperreports.engine.data.JRBeanCollectionDataSource($F{lstDetalleItem})]]></dataSourceExpression>
@@ -270,7 +309,7 @@ concat("\nSello (aplica para Sociedades)")]]></textFieldExpression>
 					<jr:columnGroup width="372" uuid="68e3fc1e-6bb2-4150-bc49-786b89ea039c">
 						<jr:columnFooter style="table_TD" height="17" rowSpan="1">
 							<staticText>
-								<reportElement key="staticText-6" x="0" y="0" width="360" height="15" uuid="cc8730c7-f3a0-475c-b4bb-f73d94748d30"/>
+								<reportElement uuid="cc8730c7-f3a0-475c-b4bb-f73d94748d30" key="staticText-6" x="0" y="0" width="360" height="15"/>
 								<box>
 									<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 									<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -286,7 +325,7 @@ concat("\nSello (aplica para Sociedades)")]]></textFieldExpression>
 						<jr:column width="41" uuid="e73852f8-04c5-4a8f-80ed-e34ed152f442">
 							<jr:columnHeader style="table_TD" height="15" rowSpan="1">
 								<staticText>
-									<reportElement key="staticText-1" x="0" y="0" width="41" height="15" uuid="6634436f-b4e8-4389-9592-c5e2f607c3b3"/>
+									<reportElement uuid="6634436f-b4e8-4389-9592-c5e2f607c3b3" key="staticText-1" x="0" y="0" width="41" height="15"/>
 									<box>
 										<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 										<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -301,7 +340,7 @@ concat("\nSello (aplica para Sociedades)")]]></textFieldExpression>
 							</jr:columnHeader>
 							<jr:detailCell style="table_TD" height="13" rowSpan="1">
 								<textField>
-									<reportElement x="0" y="0" width="41" height="13" uuid="27406fb3-0500-4f28-8f06-d997119217a4"/>
+									<reportElement uuid="27406fb3-0500-4f28-8f06-d997119217a4" x="0" y="0" width="41" height="13"/>
 									<textElement textAlignment="Center" verticalAlignment="Middle">
 										<font fontName="Arial" size="8"/>
 									</textElement>
@@ -312,7 +351,7 @@ concat("\nSello (aplica para Sociedades)")]]></textFieldExpression>
 						<jr:column width="204" uuid="99daeb2a-9861-44c0-b00a-281d23883b4d">
 							<jr:columnHeader style="table_TD" height="15" rowSpan="1">
 								<staticText>
-									<reportElement key="staticText-2" x="0" y="0" width="204" height="15" uuid="b4b9bedc-0f46-4f1d-a4a3-f2678de5109b"/>
+									<reportElement uuid="b4b9bedc-0f46-4f1d-a4a3-f2678de5109b" key="staticText-2" x="0" y="0" width="204" height="15"/>
 									<box>
 										<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 										<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -327,7 +366,7 @@ concat("\nSello (aplica para Sociedades)")]]></textFieldExpression>
 							</jr:columnHeader>
 							<jr:detailCell style="table_TD" height="13" rowSpan="1">
 								<textField>
-									<reportElement x="1" y="0" width="201" height="13" uuid="d21cb86d-4473-4361-8a28-d4a94cde1fa8"/>
+									<reportElement uuid="d21cb86d-4473-4361-8a28-d4a94cde1fa8" x="1" y="0" width="201" height="13"/>
 									<textElement verticalAlignment="Middle">
 										<font fontName="Arial" size="8"/>
 									</textElement>
@@ -338,7 +377,7 @@ concat("\nSello (aplica para Sociedades)")]]></textFieldExpression>
 						<jr:column width="48" uuid="a0cb7063-22ca-435e-ba0f-e7e91a5cb94f">
 							<jr:columnHeader style="table_TD" height="15" rowSpan="1">
 								<staticText>
-									<reportElement key="staticText-3" x="0" y="0" width="48" height="15" uuid="2b3025bf-529a-41f6-b8a7-5468a88598e5"/>
+									<reportElement uuid="2b3025bf-529a-41f6-b8a7-5468a88598e5" key="staticText-3" x="0" y="0" width="48" height="15"/>
 									<box>
 										<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 										<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -353,7 +392,7 @@ concat("\nSello (aplica para Sociedades)")]]></textFieldExpression>
 							</jr:columnHeader>
 							<jr:detailCell style="table_TD" height="13" rowSpan="1">
 								<textField pattern="#,##0">
-									<reportElement x="0" y="0" width="44" height="13" uuid="9ed8afea-69cd-4e8f-86eb-670ca2bead30"/>
+									<reportElement uuid="9ed8afea-69cd-4e8f-86eb-670ca2bead30" x="0" y="0" width="44" height="13"/>
 									<textElement textAlignment="Right" verticalAlignment="Middle">
 										<font fontName="Arial" size="8"/>
 									</textElement>
@@ -364,7 +403,7 @@ concat("\nSello (aplica para Sociedades)")]]></textFieldExpression>
 						<jr:column width="79" uuid="9a3ee870-d541-4d27-8842-b2b44724bf0a">
 							<jr:columnHeader style="table_TD" height="15" rowSpan="1">
 								<staticText>
-									<reportElement key="staticText-4" x="0" y="0" width="79" height="15" uuid="8ac47648-c99e-4a03-af7a-4b999201a2ff"/>
+									<reportElement uuid="8ac47648-c99e-4a03-af7a-4b999201a2ff" key="staticText-4" x="0" y="0" width="79" height="15"/>
 									<box>
 										<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 										<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -379,7 +418,7 @@ concat("\nSello (aplica para Sociedades)")]]></textFieldExpression>
 							</jr:columnHeader>
 							<jr:detailCell style="table_TD" height="13" rowSpan="1">
 								<textField pattern="#,##0.00">
-									<reportElement x="0" y="0" width="74" height="13" uuid="58d37b6d-28d8-429a-abd1-7a2a63ef5ae5"/>
+									<reportElement uuid="58d37b6d-28d8-429a-abd1-7a2a63ef5ae5" x="0" y="0" width="74" height="13"/>
 									<textElement textAlignment="Right" verticalAlignment="Middle">
 										<font fontName="Arial" size="8"/>
 									</textElement>
@@ -391,7 +430,7 @@ concat("\nSello (aplica para Sociedades)")]]></textFieldExpression>
 					<jr:column width="78" uuid="3a844a88-2dd0-4e87-aec9-7eade67a3b4b">
 						<jr:columnHeader style="table_TD" height="15" rowSpan="1">
 							<staticText>
-								<reportElement key="staticText-5" x="0" y="0" width="78" height="15" uuid="ccdd9ab2-d034-41b5-ac5e-17b196be8f4f"/>
+								<reportElement uuid="ccdd9ab2-d034-41b5-ac5e-17b196be8f4f" key="staticText-5" x="0" y="0" width="78" height="15"/>
 								<box>
 									<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 									<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -406,7 +445,7 @@ concat("\nSello (aplica para Sociedades)")]]></textFieldExpression>
 						</jr:columnHeader>
 						<jr:columnFooter style="table_TD" height="17" rowSpan="1">
 							<textField pattern="#,##0.00">
-								<reportElement x="0" y="0" width="75" height="15" uuid="907c84aa-9897-45a2-8b7d-f82d4b71c1a0"/>
+								<reportElement uuid="907c84aa-9897-45a2-8b7d-f82d4b71c1a0" x="0" y="0" width="75" height="15"/>
 								<textElement textAlignment="Right" verticalAlignment="Middle">
 									<font fontName="Arial" isBold="true"/>
 								</textElement>
@@ -415,7 +454,7 @@ concat("\nSello (aplica para Sociedades)")]]></textFieldExpression>
 						</jr:columnFooter>
 						<jr:detailCell style="table_TD" height="13" rowSpan="1">
 							<textField pattern="#,##0.00">
-								<reportElement x="0" y="0" width="75" height="13" uuid="608f5fc9-16e3-460f-9b7d-7698b72ee768"/>
+								<reportElement uuid="608f5fc9-16e3-460f-9b7d-7698b72ee768" x="0" y="0" width="75" height="13"/>
 								<textElement textAlignment="Right" verticalAlignment="Middle">
 									<font fontName="Arial" size="8"/>
 								</textElement>
