--- a/paquescolar-web/src/main/resources/sv/gob/mined/apps/reportes/cotizacion/rptCotizacionZap2019.jrxml
+++ b/paquescolar-web/src/main/resources/sv/gob/mined/apps/reportes/cotizacion/rptCotizacionZap2019.jrxml
@@ -2,7 +2,7 @@
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="rptActaAdjudicacion" pageWidth="612" pageHeight="792" columnWidth="544" leftMargin="34" rightMargin="34" topMargin="34" bottomMargin="34" uuid="103cf057-2364-40f0-b590-3a80879be545">
 	<property name="ireport.zoom" value="1.4641000000000017"/>
 	<property name="ireport.x" value="0"/>
-	<property name="ireport.y" value="653"/>
+	<property name="ireport.y" value="352"/>
 	<property name="ireport.scriptlethandling" value="0"/>
 	<property name="ireport.encoding" value="UTF-8"/>
 	<import value="net.sf.jasperreports.engine.*"/>
@@ -77,17 +77,17 @@
 	<group name="reporte">
 		<groupExpression><![CDATA[]]></groupExpression>
 		<groupHeader>
-			<band height="256" splitType="Stretch">
+			<band height="238" splitType="Stretch">
 				<textField>
-					<reportElement uuid="982bf22c-0375-4c4d-a107-2f899a909e36" x="10" y="16" width="524" height="41"/>
+					<reportElement uuid="982bf22c-0375-4c4d-a107-2f899a909e36" x="10" y="16" width="524" height="35"/>
 					<textElement textAlignment="Center" markup="none">
-						<font size="14" isBold="true"/>
+						<font fontName="Arial" size="12" isBold="true"/>
 					</textElement>
 					<textFieldExpression><![CDATA["SOLICITUD DE COTIZACIÓN Y COTIZACIÓN\n"+
  "(RUBRO:  SERVICIOS SUMINISTRO DE ZAPATOS ESCOLARES)"]]></textFieldExpression>
 				</textField>
 				<textField isStretchWithOverflow="true" isBlankWhenNull="false">
-					<reportElement uuid="fdae72ee-5ca1-43d1-8d24-15869c832d7f" key="textField-8" x="0" y="71" width="544" height="185"/>
+					<reportElement uuid="fdae72ee-5ca1-43d1-8d24-15869c832d7f" key="textField-8" x="0" y="53" width="544" height="185"/>
 					<box>
 						<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 						<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -95,7 +95,7 @@
 						<rightPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					</box>
 					<textElement textAlignment="Justified" markup="styled">
-						<font size="10"/>
+						<font fontName="Arial" size="8"/>
 						<paragraph lineSpacing="1_1_2"/>
 					</textElement>
 					<textFieldExpression><![CDATA["<style isBold='true' pdfFontName='Helvetica-Bold'><u>I. SOLICITUD DE COTIZACIÓN</u></style>\n\n"
@@ -105,7 +105,7 @@
 .concat(Herramientas.getNumDia($F{fechaApertura})+" del mes "+Herramientas.getNomMes($F{fechaApertura})+" del año "+Herramientas.getNumAnyo($F{fechaApertura}))
 .concat(". La cotización deberá presentarse en original a nombre del (CDE, CECE, CIE) del centro educativo,  así como especificar las siguientes condiciones de compra: \n\n")
 .concat("<style isBold='true' pdfFontName='Helvetica-Bold'>1) PLAZO  DE ENTREGA DE LOS BIENES O SERVICIOS:</style> El plazo de entrega será de Sesenta días contados a partir de la fecha indicada en el contrato para cada uno de los uniformes.\n ")
-.concat("<style isBold='true' pdfFontName='Helvetica-Bold'>2. LUGAR DE ENTREGA:</style> En la dirección del Centro Educativo, anteriormente descrita.\n\n")
+.concat("<style isBold='true' pdfFontName='Helvetica-Bold'>2) LUGAR DE ENTREGA:</style> En la dirección del Centro Educativo, anteriormente descrita.\n\n")
 .concat("<style isBold='true' pdfFontName='Helvetica-Bold'>3) CONDICIONES ESPECIALES:</style> Para presentar la cotización solicitada, tomar en cuenta:\n")
 .concat("a) Que los precios cotizados son los precios presentados al MINED y estos permanecerán firmes durante la ejecución del proceso de compra.\n")
 .concat("b) La forma y lugar de entrega de los uniformes escolares, será en el Centro Educativo, mediante un listado de recepción de bienes que contenga: el nombre del Centro Educativo, el grado, nombre del estudiante y quien firmará de recibido será el padre o madre de familia, estudiantes de tercer o bachillerato o responsable de los estudiantes. La recepción y embalaje lo coordinará directamente con el Centro Educativo.\n")
@@ -123,25 +123,28 @@
 .concat("El no cumplimento de la presentación de los documentos anteriores será motivo para dejar sin efecto la adjudicación.\n\n\n\n\n\n")]]></textFieldExpression>
 				</textField>
 			</band>
-			<band height="98">
+			<band height="92">
 				<textField isStretchWithOverflow="true">
 					<reportElement uuid="23cd71df-d6c0-42cd-9c6c-04de1151a105" x="10" y="0" width="260" height="64"/>
-					<textElement markup="styled"/>
+					<textElement markup="styled">
+						<font fontName="Arial" size="8"/>
+					</textElement>
 					<textFieldExpression><![CDATA["\n\n\n\n"
 +"F. ______________________________(Sello OAE)"
 +"\nNombre: "+$F{nombreRepresentanteCe}
 +"\n\n\nSello CDE, CECE o CIE"]]></textFieldExpression>
 				</textField>
 				<textField isStretchWithOverflow="true">
-					<reportElement uuid="0c1f62b2-6db9-46e7-95ad-d0796f8a0fa2" x="274" y="0" width="246" height="64"/>
-					<textElement markup="styled"/>
+					<reportElement uuid="0c1f62b2-6db9-46e7-95ad-d0796f8a0fa2" x="274" y="0" width="246" height="44"/>
+					<textElement markup="styled">
+						<font fontName="Arial" size="8"/>
+					</textElement>
 					<textFieldExpression><![CDATA["\n\n\n\n"
 +"F. ________________________________"
-+"\nNombre: "+$F{nombreRespresenanteEmp}
-+"\n\n\nSello si aplica\nFecha y Hora"]]></textFieldExpression>
++"\nNombre: "+$F{nombreRespresenanteEmp}]]></textFieldExpression>
 				</textField>
 				<textField pattern="" isBlankWhenNull="false">
-					<reportElement uuid="18c31414-5011-4b66-80a3-0f2304bf726d" key="textField-10" x="274" y="64" width="260" height="34"/>
+					<reportElement uuid="18c31414-5011-4b66-80a3-0f2304bf726d" key="textField-10" x="274" y="58" width="260" height="34"/>
 					<box>
 						<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 						<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -149,7 +152,7 @@
 						<rightPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					</box>
 					<textElement>
-						<font fontName="Arial" size="10"/>
+						<font fontName="Arial" size="8"/>
 					</textElement>
 					<textFieldExpression><![CDATA["Sello si aplica\n"+
 (new SimpleDateFormat("HH:mm, dd/MM/yyyy")).format(new Date())]]></textFieldExpression>
@@ -160,26 +163,34 @@
 			<band height="122" splitType="Stretch">
 				<staticText>
 					<reportElement uuid="48284050-9df8-4c2a-ac3a-fe2450658db1" x="10" y="3" width="534" height="43"/>
-					<textElement/>
+					<textElement>
+						<font fontName="Arial" size="8"/>
+					</textElement>
 					<text><![CDATA[Los precios de las cotizaciones deben expresarse con dos decimales.]]></text>
 				</staticText>
 				<textField isStretchWithOverflow="true">
 					<reportElement uuid="f115eee4-bcac-4176-b4cd-8b98cc6461f3" x="0" y="72" width="270" height="50"/>
-					<textElement/>
+					<textElement>
+						<font fontName="Arial" size="9"/>
+					</textElement>
 					<textFieldExpression><![CDATA["Nombre: "+$F{nombreRespresenanteEmp}
 +"\n\nF.____________________________"
 +"\nNombre y firma del proveedor"]]></textFieldExpression>
 				</textField>
 				<textField isStretchWithOverflow="true">
 					<reportElement uuid="36ffeb96-7081-4f74-aab3-ae00cdf8f965" x="272" y="72" width="272" height="50"/>
-					<textElement/>
+					<textElement>
+						<font fontName="Arial" size="9"/>
+					</textElement>
 					<textFieldExpression><![CDATA["Nombre: "+$F{nombreRepresentanteCe}
 +"\n\nF.____________________________"
 +"\nFecha y Hora\nSello CDE,CECE O CIE"]]></textFieldExpression>
 				</textField>
 				<staticText>
 					<reportElement uuid="d6ff2fb9-7bcc-4883-8818-85c593499b6c" x="274" y="58" width="100" height="14"/>
-					<textElement/>
+					<textElement>
+						<font fontName="Arial" size="9"/>
+					</textElement>
 					<text><![CDATA[Recibida por:]]></text>
 				</staticText>
 			</band>
@@ -198,9 +209,9 @@
 		<band splitType="Stretch"/>
 	</columnHeader>
 	<detail>
-		<band height="150" splitType="Stretch">
+		<band height="134" splitType="Stretch">
 			<componentElement>
-				<reportElement uuid="4723575c-dec8-4265-8fc0-d4c1c6c928fd" key="table" style="table 2_TD" x="0" y="108" width="534" height="42"/>
+				<reportElement uuid="4723575c-dec8-4265-8fc0-d4c1c6c928fd" key="table" style="table 2_TD" x="0" y="92" width="534" height="42"/>
 				<jr:table xmlns:jr="http://jasperreports.sourceforge.net/jasperreports/components" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports/components http://jasperreports.sourceforge.net/xsd/components.xsd">
 					<datasetRun subDataset="dsDetCotizacion" uuid="26e476c9-6d30-47e4-8f15-ad0d734b2862">
 						<dataSourceExpression><![CDATA[new net.sf.jasperreports.engine.data.JRBeanCollectionDataSource($F{lstDetalleOferta})]]></dataSourceExpression>
@@ -209,7 +220,9 @@
 						<jr:columnFooter style="table 2_TD" height="30" rowSpan="1">
 							<staticText>
 								<reportElement uuid="ff581dd2-9650-4fae-8ba9-0a5fb40c332d" x="0" y="0" width="440" height="30"/>
-								<textElement textAlignment="Center" verticalAlignment="Middle"/>
+								<textElement textAlignment="Center" verticalAlignment="Middle">
+									<font fontName="Arial" size="9"/>
+								</textElement>
 								<text><![CDATA[TOTAL US$]]></text>
 							</staticText>
 						</jr:columnFooter>
@@ -217,14 +230,18 @@
 							<jr:columnHeader style="table 2_TD" height="30" rowSpan="1">
 								<staticText>
 									<reportElement uuid="c74820ee-bfdd-470f-bae8-b666ada7badf" x="0" y="0" width="31" height="30"/>
-									<textElement textAlignment="Center" verticalAlignment="Middle"/>
+									<textElement textAlignment="Center" verticalAlignment="Middle">
+										<font fontName="Arial" size="9"/>
+									</textElement>
 									<text><![CDATA[ITEM]]></text>
 								</staticText>
 							</jr:columnHeader>
 							<jr:detailCell style="table 2_TD" height="20" rowSpan="1">
 								<textField>
 									<reportElement uuid="91f07764-1851-4467-82c2-4d76342d57a3" x="0" y="0" width="31" height="20"/>
-									<textElement textAlignment="Center" verticalAlignment="Middle"/>
+									<textElement textAlignment="Center" verticalAlignment="Middle">
+										<font fontName="Arial" size="9"/>
+									</textElement>
 									<textFieldExpression><![CDATA[$F{noItemInt}]]></textFieldExpression>
 								</textField>
 							</jr:detailCell>
@@ -233,14 +250,18 @@
 							<jr:columnHeader style="table 2_TD" height="30" rowSpan="1">
 								<staticText>
 									<reportElement uuid="35277531-c467-49c3-a52f-5d63f7c40f6b" x="0" y="0" width="166" height="30"/>
-									<textElement textAlignment="Center" verticalAlignment="Middle"/>
+									<textElement textAlignment="Center" verticalAlignment="Middle">
+										<font fontName="Arial" size="9"/>
+									</textElement>
 									<text><![CDATA[DESCRIPCION]]></text>
 								</staticText>
 							</jr:columnHeader>
 							<jr:detailCell style="table 2_TD" height="20" rowSpan="1">
 								<textField>
 									<reportElement uuid="9e839bc6-d930-4dbb-ae81-ba9f63a8f998" x="2" y="0" width="164" height="20"/>
-									<textElement verticalAlignment="Middle"/>
+									<textElement verticalAlignment="Middle">
+										<font fontName="Arial" size="9"/>
+									</textElement>
 									<textFieldExpression><![CDATA[$F{nombreProducto}]]></textFieldExpression>
 								</textField>
 							</jr:detailCell>
@@ -249,14 +270,18 @@
 							<jr:columnHeader style="table 2_TD" height="30" rowSpan="1">
 								<staticText>
 									<reportElement uuid="84068779-e922-4f09-9547-598d1e87cb60" x="0" y="0" width="80" height="30"/>
-									<textElement textAlignment="Center" verticalAlignment="Middle"/>
+									<textElement textAlignment="Center" verticalAlignment="Middle">
+										<font fontName="Arial" size="9"/>
+									</textElement>
 									<text><![CDATA[CANTIDAD SOLICITADA]]></text>
 								</staticText>
 							</jr:columnHeader>
 							<jr:detailCell style="table 2_TD" height="20" rowSpan="1">
 								<textField pattern="#,##0;(-#,##0)">
 									<reportElement uuid="bc6ea4ff-28e0-411c-a1f6-a2eee29b0a04" x="0" y="0" width="78" height="20"/>
-									<textElement textAlignment="Right" verticalAlignment="Middle"/>
+									<textElement textAlignment="Right" verticalAlignment="Middle">
+										<font fontName="Arial" size="9"/>
+									</textElement>
 									<textFieldExpression><![CDATA[$F{cantidad}]]></textFieldExpression>
 								</textField>
 							</jr:detailCell>
@@ -265,14 +290,18 @@
 							<jr:columnHeader style="table 2_TD" height="30" rowSpan="1">
 								<staticText>
 									<reportElement uuid="6a59e292-7149-4f56-ac0e-ce1d371f22f2" x="1" y="0" width="80" height="30"/>
-									<textElement textAlignment="Center" verticalAlignment="Middle"/>
+									<textElement textAlignment="Center" verticalAlignment="Middle">
+										<font fontName="Arial" size="9"/>
+									</textElement>
 									<text><![CDATA[CANTIDAD OFERTADA]]></text>
 								</staticText>
 							</jr:columnHeader>
 							<jr:detailCell style="table 2_TD" height="20" rowSpan="1">
 								<textField pattern="#,##0;(-#,##0)">
 									<reportElement uuid="c5f24336-e630-4744-932f-bd5f4c2b2a57" x="1" y="0" width="78" height="20"/>
-									<textElement textAlignment="Right" verticalAlignment="Middle"/>
+									<textElement textAlignment="Right" verticalAlignment="Middle">
+										<font fontName="Arial" size="9"/>
+									</textElement>
 									<textFieldExpression><![CDATA[$F{cantidad}]]></textFieldExpression>
 								</textField>
 							</jr:detailCell>
@@ -281,7 +310,9 @@
 							<jr:columnHeader style="table 2_TD" height="30" rowSpan="1">
 								<staticText>
 									<reportElement uuid="3c57fd32-19e6-4005-a1fe-6f8d1b2f846e" x="0" y="0" width="80" height="30"/>
-									<textElement textAlignment="Center" verticalAlignment="Middle"/>
+									<textElement textAlignment="Center" verticalAlignment="Middle">
+										<font fontName="Arial" size="9"/>
+									</textElement>
 									<text><![CDATA[PRECIO
 UNITARIO]]></text>
 								</staticText>
@@ -289,7 +320,9 @@ UNITARIO]]></text>
 							<jr:detailCell style="table 2_TD" height="20" rowSpan="1">
 								<textField pattern="#,##0.00;(#,##0.00)">
 									<reportElement uuid="5f604983-e75c-41b8-9847-48380e3d0af2" x="0" y="0" width="78" height="20"/>
-									<textElement textAlignment="Right" verticalAlignment="Middle"/>
+									<textElement textAlignment="Right" verticalAlignment="Middle">
+										<font fontName="Arial" size="9"/>
+									</textElement>
 									<textFieldExpression><![CDATA[$F{precioUnitario}]]></textFieldExpression>
 								</textField>
 							</jr:detailCell>
@@ -299,45 +332,51 @@ UNITARIO]]></text>
 						<jr:columnHeader style="table 2_TD" height="30" rowSpan="1">
 							<staticText>
 								<reportElement uuid="1df311f5-ffc6-43a5-84ce-b5d234bdf273" x="0" y="0" width="80" height="30"/>
-								<textElement textAlignment="Center" verticalAlignment="Middle"/>
+								<textElement textAlignment="Center" verticalAlignment="Middle">
+									<font fontName="Arial" size="9"/>
+								</textElement>
 								<text><![CDATA[PRECIO TOTAL]]></text>
 							</staticText>
 						</jr:columnHeader>
 						<jr:columnFooter style="table 2_TD" height="30" rowSpan="1">
 							<textField pattern="#,##0.00;#,##0.00-">
 								<reportElement uuid="e36d9665-9c17-4627-aeaf-2acea5a0a8d7" x="0" y="0" width="78" height="30"/>
-								<textElement textAlignment="Right" verticalAlignment="Middle"/>
+								<textElement textAlignment="Right" verticalAlignment="Middle">
+									<font fontName="Arial" size="9"/>
+								</textElement>
 								<textFieldExpression><![CDATA[$V{TOTAL}]]></textFieldExpression>
 							</textField>
 						</jr:columnFooter>
 						<jr:detailCell style="table 2_TD" height="20" rowSpan="1">
 							<textField pattern="#,##0.00;(#,##0.00)">
 								<reportElement uuid="916b2d29-6e52-4eef-a165-eb5407c7daa0" x="0" y="0" width="78" height="20"/>
-								<textElement textAlignment="Right" verticalAlignment="Middle"/>
+								<textElement textAlignment="Right" verticalAlignment="Middle">
+									<font fontName="Arial" size="9"/>
+								</textElement>
 								<textFieldExpression><![CDATA[$F{precioUnitario}.multiply(new java.math.BigDecimal($F{cantidad}))]]></textFieldExpression>
 							</textField>
 						</jr:detailCell>
 					</jr:column>
 				</jr:table>
 			</componentElement>
-			<break>
-				<reportElement uuid="605078d2-82e7-445f-9c66-6d060313590f" x="0" y="0" width="544" height="1"/>
-			</break>
 			<textField>
 				<reportElement uuid="e05e2e40-263b-4ffb-a0da-947cbfb43d7f" x="0" y="12" width="265" height="18"/>
-				<textElement markup="styled"/>
+				<textElement markup="styled">
+					<font fontName="Arial" size="9"/>
+				</textElement>
 				<textFieldExpression><![CDATA["<u><style isBold='true' pdfFontName='Helvetica-Bold'>II. COTIZACIÓN</style></u>\n"]]></textFieldExpression>
 			</textField>
 			<textField>
 				<reportElement uuid="17abccf8-e63d-4a28-a1b1-3359b4ee3163" x="0" y="30" width="544" height="20"/>
 				<textElement textAlignment="Center" markup="none">
-					<font size="14"/>
+					<font fontName="Arial" size="12"/>
 				</textElement>
 				<textFieldExpression><![CDATA["RUBRO "+$P{descripcionRubro}]]></textFieldExpression>
 			</textField>
 			<textField isBlankWhenNull="true">
-				<reportElement uuid="0079c472-84f4-4eb1-a434-f60775c71913" x="0" y="59" width="544" height="49"/>
+				<reportElement uuid="0079c472-84f4-4eb1-a434-f60775c71913" x="0" y="59" width="544" height="32"/>
 				<textElement textAlignment="Justified" markup="styled">
+					<font fontName="Arial" size="8"/>
 					<paragraph lineSpacing="1_1_2"/>
 				</textElement>
 				<textFieldExpression><![CDATA["Lugar y Fecha: "+$F{lugarFecha}+"\nSeñores (CDE,  CECE, CIE): "+$F{modalidadAdministrativa}
